--- a/udeml/utils.html
+++ b/udeml/utils.html
@@ -27,6 +27,10 @@
                    pattern=".+" required>
 
 
+        <h2>Submodules</h2>
+        <ul>
+                <li><a href="utils/miscutils.html">miscutils</a></li>
+        </ul>
 
 
 
